﻿- Fixed error showing even when all files are successful
- Fixed a bug in poly edge fixer