@@ -139,6 +139,7 @@
             this.Name = "CalculateVectorDifference";
             this.StartPosition = System.Windows.Forms.FormStartPosition.CenterParent;
             this.Text = "Calculate Vector Difference";
+            this.Load += new System.EventHandler(this.CalculateVectorDifference_Load);
             this.ResumeLayout(false);
             this.PerformLayout();
 
