@@ -1,11 +1,4 @@
 ﻿using System;
-using System.Collections.Generic;
-using System.ComponentModel;
-using System.Data;
-using System.Drawing;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
 using System.Windows.Forms;
 
 namespace ymapmover
@@ -19,7 +12,7 @@ namespace ymapmover
 
         private void YmapYbnHowTo_Load(object sender, EventArgs e)
         {
-            richTextBox1.ScrollBars = System.Windows.Forms.RichTextBoxScrollBars.None;
+            richTextBox1.ScrollBars = RichTextBoxScrollBars.None;
         }
     }
 }
